# TonikX-ITMO_ICT_WebDevelopment_2025-2026

./: .gitignore  404.html  MKDOCS_GUIDE.md  index.html  main.py  mkdocs.yml  notes.txt  package-lock.json  package.json  requirements.txt  sitemap.xml  task1_udp_hello.py  task2_tcp_math.py  task3_http_server.py  task4_chat.py  task5_web_server.py  test_task4.py
LP2/: db.sqlite3
Task1/: db.sqlite3
Task2/: db.sqlite3
Task3/: db.sqlite3
about/: index.html
airport_board/: README.md
docs/: _config.yml  about.md  admin.md  conclusion.md  djoser.md  index.md  installation.md  interfaces.md  lab2.md  lab3.md  lab4.md  lab_report.md  mkdocs.yml  practical-task-1.md  practical-task-2.md  practical-task-3.md  practical_3_2_1.md  practical_work.md  racing-app.md  task1.md  task2.md  task3.md  task4.md  task5.md  ПРОВЕРКА_РАБОТЫ.md
documentation/: mkdocs.yml  requirements.txt
ex1/: index.html
ex2/: index.html
ex3/: index.html
ex4/: index.html
ex5/: index.html
homework_board/: PROJECT_REPORT.md  README.md
lab-4/: README.md  package.json
lab1/: README.md  grades.json  mkdocs.yml
lab1_docs/: mkdocs.yml
lab2/: .gitignore  README.md  mkdocs.yml  requirements.txt
lab3/: .gitignore  (+3 more)
students/k3339/Mischenko_Maxim/Lr3/airline_admin/: manage.py  pyproject.toml
students/k3339/Mischenko_Maxim/Lr3/airline_admin/airline_admin/: asgi.py  settings.py  urls.py
students/k3339/Mischenko_Maxim/Lr3/airline_admin/airport/: admin.py  models.py  serializers.py  urls.py  views.py
students/k3339/Mischenko_Maxim/Lr3/airline_admin/airport/migrations/: 0001_initial.py
(+7813 files in other folders)
