[project]
name = "lr3"
version = "0.1.0"
description = ""
authors = [{name = "Maxim Mischenko",email = "maxim.y.mischenko@gmail.com"}]
readme = "README.md"

requires-python = ">=3.12,<4"

dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djoser (>=2.3.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
